force-app/main/default/objects/Apartment__c/fields/Cons_Cost_per_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Cons_Cost_per_SqFt__c</fullName>
    <formula>text(Round((Cost_of_Building__c  /  Total_SqFt_of_the_Building__c),0))</formula>
    <label>Cons Cost per SqFt</label>
    <type>Text</type>
</CustomField>