force-app/main/default/objects/Apartment__c/fields/Cost_of_Building__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Building__c</fullName>
    <label>Cost of Building</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>