force-app/main/default/objects/Apartment__c/fields/No_of_Sold_Units__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sold_Units__c</fullName>
    <label>No of Sold Units</label>
    <summaryFilterItems>
        <field>Property__c.Status__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </summaryFilterItems>
    <summaryForeignKey>Property__c.Apartment_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>