force-app/main/default/objects/Apartment__c/fields/Sum_of_Amt_from_Sold_Units__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Amt_from_Sold_Units__c</fullName>
    <label>Amt from Sold Units</label>
    <summarizedField>Property__c.Customer_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Property__c.Status__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </summaryFilterItems>
    <summaryForeignKey>Property__c.Apartment_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>