force-app/main/default/objects/Apartment__c/validationRules/Apt_No_of_Units.validationRule-meta.xml
<ValidationRule>
    <fullName>Apt_No_of_Units</fullName>
    <active>true</active>
    <description>Should mention the number of units in this apartment / community.</description>
    <errorConditionFormula>ISBLANK( Total_No_Of_Units__c )</errorConditionFormula>
    <errorDisplayField>Total_No_Of_Units__c</errorDisplayField>
    <errorMessage>Enter the no of units for this apartment.</errorMessage>
</ValidationRule>