force-app/main/default/objects/Apartment__c/validationRules/Total_SqFt_of_the_Apt.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_SqFt_of_the_Apt</fullName>
    <active>true</active>
    <description>Mention the total area of the building.</description>
    <errorConditionFormula>ISBLANK( Total_SqFt_of_the_Building__c )</errorConditionFormula>
    <errorDisplayField>Total_SqFt_of_the_Building__c</errorDisplayField>
    <errorMessage>Enter the total area of the building in sqft.</errorMessage>
</ValidationRule>