force-app/main/default/objects/Apartment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sum_of_Amt_from_Sold_Units__c</columns>
    <columns>Cost_of_Building__c</columns>
    <columns>No_Available_Units__c</columns>
    <columns>No_of_Sold_Units__c</columns>
    <columns>Cons_Cost_per_SqFt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>